# stolgo

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
docs/: HLD.md  PA.md  UI.md
docs/source/: conf.py  generate_stolgo_rst.bat
examples/: btc_consolidation_breakout.py  btc_usdt_coindcx_backtest.py  parameter_sweep.py  trend_breakout_backtest.py  vector_momentum_backtest.py
examples/pa/: btc_21d_sr_intraday.py  btc_consolidation_pa.py  failed_break.py  intraday_breakout.py  parabolic_short.py  scalp_green_fade.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.jsx  main.jsx  styles.css
lib/stolgo/: __init__.py  breakout.py  candlestick.py  common.py  exception.py  getOptionChainCSV (2).py  helper.py  nasdaq.py  nse_data.py  nse_urls.py  request.py  samco.py  trend.py
tests/: __init__.py  conftest.py  test_broker_paper.py  test_cli_run.py  test_core_clock.py  test_core_config.py  test_core_events.py  test_core_exceptions.py  test_core_types.py  test_data_bandl_source.py  test_data_cache.py  test_data_frame_source.py  test_data_normalize.py  test_engine_backtest.py  test_engine_sweep.py  test_nse_option_chain.py  test_oms_sim_broker.py  test_public_api.py  test_report_exporters.py  test_report_metrics.py  test_report_result.py  test_report_tearsheet.py  test_report_trades.py  test_signals_indicators.py  test_signals_pipeline.py  test_ui_adapters.py  test_ui_index.py  test_ui_server.py
tests/fixtures/: bandl_btcusdt_1h_mock.json  (+3 more)
(+96 files in other folders)
